// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media component renders correctly 1`] = `
<div>
  <img
    class="Media-root-1"
  />
</div>
`;

exports[`Media component renders correctly if child is not img or YoutubeVideo 1`] = `
<div>
  <p
    class="Media-root-7"
  >
    text
  </p>
</div>
`;

exports[`Media component renders correctly if child youtube video 1`] = `
<div>
  <div
    class="Media-root-11 Media-contain-12"
  >
    <div
      class="YoutubeVideo-root-13"
      data-testid="youtube-dialog-wrapper"
    >
      <button
        aria-label="label"
        class="YoutubeVideo-thumbnail-15"
        data-testid="thumbnail"
        type="button"
      >
        <img
          alt="label"
          class="YoutubeVideo-previewImage-14"
          data-testid="youtube-preview-image"
          src="https://i.ytimg.com/vi/youtubeId/maxresdefault.jpg"
        />
        <span
          class="AlternativeContent-root-24"
        >
          label
        </span>
        <div
          aria-disabled="false"
          aria-label="label"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-36 iconButton IconButton-medium-42 IconButton-contained-37 YoutubeVideo-playButton-17"
          data-testid="thumbnail-button"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8 5v14l11-7z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Media component renders correctly if size is not cover 1`] = `
<div>
  <img
    class="Media-root-9 Media-contain-10"
  />
</div>
`;

exports[`Media component renders correctly with className 1`] = `
<div>
  <img
    class="test Media-root-3"
  />
</div>
`;
